# cognitao_ros_examples

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
assets/machines/: wait_example.xml
include/cognitao_ros_examples/: RosActionWaitServer.h
src/: RosActionWaitServer.cpp  main.cpp
